--- a/app/assets/css/launcher.css
+++ b/app/assets/css/launcher.css
@@ -797,6 +797,27 @@ svg[data-icon="error-circle"] {
 svg[data-icon="success-circle"] {
     color: #31e131;
 }
+svg[data-icon="progress-circle"] #bar {
+    stroke: #ff9f1e;
+}
+svg[data-icon="progress-circle"] circle {
+    stroke-dashoffset: 0;
+    transition: stroke-dashoffset 1s linear;
+    stroke: #666;
+    stroke-width: 8px;
+}
+
+.progress-container {
+    transform: rotate(-90deg);
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    margin: auto;
+    right: 0;
+    display: flex;
+    align-items: center;
+    padding: 5px;
+}
 
 p {
     margin: 14px 0;
@@ -860,6 +881,8 @@ p {
 }
 
 .sidebar .item, .content .item {
+    display: flex;
+    align-items: center;
     white-space: nowrap;
     text-overflow: ellipsis;
     overflow: hidden;
