--- a/app/assets/css/launcher.css
+++ b/app/assets/css/launcher.css
@@ -796,7 +796,7 @@ var {
 .overlay>.container-ov1>.content {
     line-height: normal;
     font-size: 1em;
-    overflow: hidden scroll;
+    overflow: auto scroll;
     position: relative;
     z-index: 0;
     padding: 0 8px 16px 16px;
@@ -805,7 +805,7 @@ var {
 
 .overlay>.container-ov1>.content.log {
     text-align: initial;
-    white-space: break-spaces;
+    white-space: pre;
     word-break: break-word;
     background: var(--background-modifier-selected);
     padding: 4px 8px 8px 16px;
