--- a/app/assets/css/launcher.css
+++ b/app/assets/css/launcher.css
@@ -102,12 +102,12 @@
 }
 
 div {
-    transition: all 0.5s;
+    transition: all 0.1s;
 }
 
 html,
 body {
-    transition: 1s all;
+    transition: .5s all;
     overflow: hidden;
     height: 100%;
     background: var(--background-tertiary);
@@ -445,7 +445,7 @@ img {
     top: 10vh;
     user-select: none;
     font-size: 3em;
-    color: var(--header-primary);
+    color: #fff;
     font-weight: 600;
     text-shadow: 0 0 8px #aaa;
     -webkit-font-smoothing: antialiased;
@@ -459,7 +459,7 @@ img {
     margin: 10px;
     user-select: none;
     font-size: 1.3em;
-    color: var(--header-primary);
+    color: #fff;
     font-weight: 600;
     text-shadow: 0 0 5px #888;
     -webkit-font-smoothing: antialiased;
@@ -1748,6 +1748,7 @@ body {
     height: 100%;
     width: 100%;
     overflow: hidden overlay;
+    display: flex;
 }
 
 #main>.main-content>.top {
@@ -1853,6 +1854,10 @@ body {
     overflow: hidden;
     flex-shrink: 0;
     transition: all 0.2s;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex: 0 0 auto;
 }
 
 .avatar img {
@@ -2439,6 +2444,11 @@ a:hover {
     line-height: 24px;
 }
 
+.size24 {
+    font-size: 24px;
+    line-height: 30px;
+}
+
 .sizeQ {
     font-size: 1em;
     line-height: normal;
@@ -2569,4 +2579,46 @@ a:hover {
 }
 
 
-/* ======================== */
+/* === Home Section === */
+.headerDiscover {
+    margin: 16px 0 16px 16px;
+    font-weight: 700;
+}
+.categoryItem {
+    color: var(--header-secondary);
+    margin-left: 8px;
+    box-sizing: border-box;
+    display: block;
+    padding: 1px 0;
+    border-radius: 4px;
+    transition: none;
+}
+.categoryItem:hover {
+    color: var(--interactive-hover);
+}
+.categoryItem > .innerItem {
+    height: auto;
+    padding: 5px 8px;
+    display: flex;
+    align-items: center;
+    border-radius: 4px;
+
+}
+.categoryItem > .innerItem:hover {
+    background: var(--background-modifier-hover);
+    cursor: pointer;
+}
+.categoryItem > .innerItem > .content {
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    min-width: 0;
+    flex: 1 1 auto;
+}
+.categoryItem.selected {
+    color: #fff;
+}
+.categoryItem.selected .innerItem{
+    background: var(--brand-color);
+}
+/* -------------------- */
