--- a/app/assets/css/launcher.css
+++ b/app/assets/css/launcher.css
@@ -1623,20 +1623,21 @@ body {
     flex-shrink: 0;
     justify-content: center;
 }
-
-.container>.base {
+.container > .base {
     display: flex;
-    -webkit-box-align: stretch;
+    flex-direction: column;
+    position: relative;
+    flex-grow: 1;
+    overflow: hidden;
+}
+
+.base > .content {
+    display: flex;
     align-items: stretch;
-    -webkit-box-pack: start;
     justify-content: flex-start;
     min-width: 0;
     min-height: 0;
-    -webkit-box-flex: 1;
-    flex: 1 1 80%;
-    position: relative;
-    /*background-color: var(--background-primary);*/
-    overflow: hidden;
+    flex: 1 1 auto;
 }
 
 .guilds {
@@ -1649,12 +1650,12 @@ body {
     background-color: var(--background-tertiary);
 }
 
-.guilds>.tree {
+.guilds > .tree {
     height: 100%;
     display: flex;
 }
 
-.guilds>.tree * {
+.guilds > .tree * {
     transition: all .3s ease;
 }
 
@@ -1685,7 +1686,7 @@ body {
     /*background-color: #333;*/
 }
 
-.listItem>.wrapper {
+.listItem > .wrapper {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -1698,18 +1699,18 @@ body {
     overflow: auto;
 }
 
-.listItem>.wrapper:hover {
+.listItem > .wrapper:hover {
     border-radius: 25%;
 }
 
-.listItem>.guildSeparator {
+.listItem > .guildSeparator {
     height: 2px;
     width: 32px;
     border-radius: 1px;
     background-color: var(--background-modifier-accent);
 }
 
-.listItem>.wrapper>.singleIconBtn {
+.listItem > .wrapper > .singleIconBtn {
     padding: 8px;
     cursor: pointer;
     display: flex;
@@ -1723,7 +1724,7 @@ body {
     background-color: var(--background-primary);
 }
 
-.listItem>.wrapper:hover>.singleIconBtn {
+.listItem > .wrapper:hover > .singleIconBtn {
     color: var(--background-accent);
 }
 
@@ -1742,7 +1743,7 @@ body {
     height: 0
 }
 
-#main>.main-content {
+.main-content {
     position: relative;
     /*padding: 10px;*/
     height: 100%;
@@ -1751,7 +1752,7 @@ body {
     display: flex;
 }
 
-#main>.main-content>.top {
+.main-content > .top {
     width: 100%;
     height: 100%;
     position: relative;
@@ -1759,14 +1760,14 @@ body {
     color: #f1f1f1;
 }
 
-#main>.main-content>.top>img {
+.main-content > .top > img {
     position: absolute;
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
 
-#main>.main-content>.top>.top-overlay {
+.main-content > .top > .top-overlay {
     width: 100%;
     height: 100%;
     position: absolute;
@@ -1775,7 +1776,7 @@ body {
     background: linear-gradient(180deg, transparent 70%, rgba(10, 10, 10, 0.8));
 }
 
-#main>.main-content>.top>.top-overlay>.top-toolbar {
+.main-content > .top > .top-overlay > .top-toolbar {
     position: absolute;
     bottom: 0;
     right: 0;
@@ -1790,11 +1791,16 @@ body {
     color: #fdfdfd;
 }
 
-#main>.main-content>.top h2 {
+.main-content > .top h2 {
     font-size: 25px;
     font-weight: 900;
     line-height: 25px;
     color: inherit;
+}
+
+.main-content  > .main {
+    position: relative;
+    padding: 10px;
 }
 
 #playButton {
@@ -1814,11 +1820,6 @@ body {
 
 #playButton:active {
     background-color: var(--brand-color-2) !important;
-}
-
-#main>.main-content>.main {
-    position: relative;
-    padding: 10px;
 }
 
 .button {
