--- a/app/assets/css/launcher.css
+++ b/app/assets/css/launcher.css
@@ -102,7 +102,11 @@
 }
 
 div {
-    transition: all 0.1s;
+    transition: 
+    0.1s background,
+    0.1s width,
+    0.1s height;
+
 }
 
 html,
@@ -227,10 +231,10 @@ img {
     --interactive-normal: #b9bbbe;
     --interactive-hover: #dcddde;
     --interactive-active: #fff;
-    --background-modifier-selected: #3f3f3f;
-    --background-modifier-accent: #393939;
-    --background-modifier-hover: #393939;
-    --background-modifier-active: #3a3a3a;
+    --background-modifier-hover: rgba(79,84,92,0.16);
+    --background-modifier-active: rgba(79,84,92,0.24);
+    --background-modifier-selected: rgba(79,84,92,0.32);
+    --background-modifier-accent: hsla(0,0%,100%,0.06);
     --background-floating: #18191c;
     --header-primary: #fff;
     --header-secondary: #b9bbbe;
@@ -261,10 +265,10 @@ img {
     --interactive-active: #060607;
     /*--background-modifier-selected:rgba(116,127,141,0.24);*/
     /*--background-modifier-accent:rgba(6,6,7,0.08);*/
-    --background-modifier-hover: rgba(116, 127, 141, 0.08);
-    --background-modifier-active: rgba(116, 127, 141, 0.16);
-    --background-modifier-selected: rgba(116, 127, 141, 0.24);
-    --background-modifier-accent: rgba(6, 6, 7, 0.08);
+    --background-modifier-hover: rgba(116,127,141,0.08);
+    --background-modifier-active: rgba(116,127,141,0.16);
+    --background-modifier-selected: rgba(116,127,141,0.24);
+    --background-modifier-accent: rgba(6,6,7,0.08);
     --background-floating: #fff;
     --header-primary: #060607;
     --header-secondary: #4f5660;
@@ -1730,7 +1734,7 @@ body {
 }
 
 .listItem > .wrapper:hover > .singleIconBtn {
-    color: var(--interactive-hover);
+    color: #ddd;
     background-color: var(--brand-color-1);
 }
 
@@ -1741,7 +1745,7 @@ body {
     border-radius: 25%;
 }
 .listItem.selected > .wrapper > .singleIconBtn {
-    color: var(--interactive-active);
+    color: #fff;
     background-color: var(--brand-color);
 }
 
@@ -2014,12 +2018,14 @@ body {
     padding: 12px 15px;
     text-decoration: none;
     display: block;
-    border-radius: 5px;
+    /* border-radius: 5px; */
     user-select: none;
+    font-weight: 500;
 }
 
 .container-f .dropdown a:hover {
     background-color: var(--brand-color-1);
+    color: #eee;
 }
 
 .button-1w5pas {
@@ -2683,13 +2689,14 @@ a:hover {
 .viewWrapper > .header-q {
     position: relative;
     text-align: center;
-    margin-bottom: 32px;
+    margin-bottom: 16px;
     min-height: 200px;
 }
 .viewWrapper > .header-q .headerImage {
     width: 100%;
     height: auto;
     max-height: 40vh;
+    min-height: 300px;
     object-fit: cover;
     border-radius: 8px;
 }
@@ -2702,6 +2709,7 @@ a:hover {
     display: flex;
     align-items: center;
     justify-content: center;
+    overflow: hidden;
 }
 .viewWrapper > .header-q .headerContentWrapper > .headerContent {
     width: 100%;
@@ -2717,6 +2725,10 @@ a:hover {
     width: 100%;
     margin-bottom: 32px;
     min-width: 580px;
+    overflow: hidden;
+    border-radius: 8px;
+    background: var(--background-modifier-accent);
+    /* padding: 14px; */
 }
 .viewWrapper > .footer-q {
     margin: 32px 0;
@@ -2725,7 +2737,87 @@ a:hover {
 
 .title {
     font-weight: 700;
+    color: #fff;
 }
 .subtitle {
     font-weight: inherit;
+    color: #dfdfdf;
+}
+
+/* ====== */
+.grid-q {
+    position: relative;
+    /*margin-top: 1em;*/
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+.grid-q.grayBackground {
+    background: var(--background-modifier-selected);
+}
+
+.row-q {
+    width: 100%;
+    max-width: 1260px;
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    gap: 0 20px;
+    padding: 0 32px;
+}
+
+.container-z {
+    padding-top: 48px;
+    padding-bottom: 48px;
+}
+
+.imageLeft .featureImage {
+    grid-column: span 7;
+    order: 1;
+}
+.imageLeft .description {
+    grid-column: 9/span 4;
+    order: 2;
+}
+.imageRight .featureImage {
+    grid-column: 6/span 7;
+    order: 2;
+}
+.imageRight .description {
+    grid-column: 1/span 4;
+    order: 1;
+}
+.imageBottom .featureImage {
+    margin-top: 16px;
+}
+.imageBottom .description {
+    grid-column: 2/span 10;
+    text-align: center;
+}
+
+.featureImage {
+    grid-column: span 12;
+    position: relative;
+    width: 100%;
+    margin-top: auto;
+    margin-bottom: auto;
+    object-fit: cover;
+}
+.featureImage.lim {
+    max-width: 678px;
+    max-height: 440px;
+}
+
+.description {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.description h2 {
+    font-size: 32px;
+    font-weight: 700;
+    line-height: 120%;
+}
+.description .subtitle {
+    margin-top: 24px;
+    color: inherit;
 }
