--- a/app/loading/index.css
+++ b/app/loading/index.css
@@ -3,11 +3,11 @@
   user-select: none;
 }
 :root {
-  --text-color: #ddd;
-  --background-color: #252528;
+  --text-color: #555;
+  --background-color: #fff;
 }
 body {
-  background-color: #222;
+  background-color: #fff;
   margin: 0;
   overflow: hidden;
   font-family: Arial, Helvetica, sans-serif;
@@ -41,8 +41,8 @@ img {
   width: 100%;
   height: 2em;
   font-weight: 800;
-  font-size: 1.2rem;
-  margin-top: 1rem;
+  font-size: 18px;
+  margin-top: 0;
   color: var(--text-color);
 }
 .status-container {
@@ -66,8 +66,5 @@ img {
   white-space: nowrap;
 }
 .logo-spl {
-  background: #fff;
-  border-radius: 20%;
-  box-shadow: 5px 5px 10px 0px #666;
-  max-width: 15em;
+  max-width: 240px;
 }
