--- a/app/loading/index.css
+++ b/app/loading/index.css
@@ -1,16 +1,19 @@
+
+@import url(fonts.css);
+
 * {
   box-sizing: border-box;
   user-select: none;
 }
 :root {
-  --text-color: #555;
+  --text-color: #333;
   --background-color: #fff;
 }
 body {
   background-color: #fff;
   margin: 0;
   overflow: hidden;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Roboto", Arial, Helvetica, sans-serif;
 }
 img {
   max-width: 100%;
@@ -19,7 +22,7 @@ img {
 #app-mount {
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   width: 100%;
   height: 100%;
   min-height: 100vh;
@@ -39,32 +42,28 @@ img {
 .loading-container {
   position: relative;
   width: 100%;
-  height: 2em;
-  font-weight: 800;
+  font-weight: 600;
   font-size: 18px;
-  margin-top: 0;
   color: var(--text-color);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  padding: 8px;
 }
 .status-container {
-  position: absolute;
   display: flex;
   flex-direction: row;
   align-items: baseline;
   justify-content: center;
   flex-wrap: nowrap;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  transition: opacity 0.1s ease;
-  opacity: 0;
-}
-.status-container.show {
-  opacity: 1;
-}
-.status-container > #loading-text {
   white-space: nowrap;
+}
+.status-container:not(.show) {
+  display: none;
 }
 .logo-spl {
   max-width: 240px;
+  margin: -16px 0;
 }
