--- a/src/render/assets/css/input.module.css
+++ b/src/render/assets/css/input.module.css
@@ -51,6 +51,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: flex-start;
+    margin-top: 0.25rem;
 }
 
 .inputWrapper .toggleIcon {
