--- a/src/render/assets/css/launcher.css
+++ b/src/render/assets/css/launcher.css
@@ -305,6 +305,21 @@ svg[data-icon="success-circle"] {
     color: #31e131;
 }
 
+svg[data-icon="progress-circle"] {
+    transform: rotate(-90deg);
+}
+
+svg[data-icon="progress-circle"] #bar {
+    stroke: var(--brand-color);
+}
+
+svg[data-icon="progress-circle"] circle {
+    stroke-dashoffset: 0;
+    transition: stroke-dashoffset .2s linear;
+    stroke: var(--background-modifier-accent);
+    stroke-width: 8px;
+}
+
 .color-red {
     color: var(--text-negative);
 }
