--- a/src/render/assets/css/settings.module.css
+++ b/src/render/assets/css/settings.module.css
@@ -1,12 +1,25 @@
 .settingContainer {
     display: flex;
     flex-direction: column;
-    margin-bottom: 1.3rem;
+    padding-bottom: 1.3rem;
+    border-bottom: thin solid var(--background-modifier-accent);
+}
+
+:global(:root.alt-settings) .settingContainer {
+    display: flex;
+    flex-direction: column;
+    margin-top: 12px;
+    background: var(--background-secondary);
+    padding: 12px 16px;
+    border-radius: 8px;
 }
 
 .settingGroupContainer {
     position: relative;
     margin-bottom: 2rem;
+}
+.settingGroupContainer > div + div {
+    margin-top: 1.3rem;
 }
 
 .settingGroupContainer .labelRow {
