--- a/src/render/assets/css/launcher.css
+++ b/src/render/assets/css/launcher.css
@@ -448,6 +448,10 @@ p {
     left: 0;
 }
 
+:root.alt-settings .sidebar-region {
+    background-color: var(--background-secondary-alt);
+}
+
 .sidebar-region {
     background-color: var(--background-secondary);
     display: flex;
@@ -543,6 +547,10 @@ p {
     background-color: var(--background-modifier-accent);
 }
 
+:root.alt-settings .sidebarView .content-region {
+    background: var(--background-tertiary);
+}
+
 .sidebarView .content-region {
     background: var(--background-primary);
     flex: 1 1 800px;
@@ -606,19 +614,11 @@ h5 {
     color: var(--header-primary);
 }
 :root.alt-settings .content-region .content h2 {
-    position: sticky;
-    top: 0;
-    width: 100%;
-    z-index: 15;
-    /* text-align: center; */
+    font-size: 1.5em;
     margin-bottom: 20px;
     line-height: 1;
     color: var(--header-primary);
-    padding: 12px 16px;
-    border-bottom: 1px solid var(--background-modifier-accent);
-    background: var(--background-tertiary);
-    border-radius: 8px;
-    box-shadow: 1px 2px 5px var(--color-shadow);
+    padding: 12px 8px;
 }
 
 .content-region .content h5 {
