--- a/src/render/assets/css/toggleswitch.module.css
+++ b/src/render/assets/css/toggleswitch.module.css
@@ -2,7 +2,7 @@
 
 .toggleSwitch {
     position: relative;
-    display: inline-block;
+    display: block;
     width: 50px;
     height: 28px;
     border-radius: 50px;
