--- a/src/render/assets/css/colors.css
+++ b/src/render/assets/css/colors.css
@@ -5,6 +5,8 @@
     --background-primary: #282828;
     --background-secondary: #1f1f1f;
     --background-secondary-alt: #181818;
+    --sbw-background-side: #181818;
+    --sbw-background-main: #121212;
     --interactive-normal: #b9bbbe;
     --interactive-hover: #dcddde;
     --interactive-active: #fff;
@@ -44,6 +46,8 @@
     --background-primary: #fff;
     --background-secondary: #f2f3f5;
     --background-secondary-alt: #dbdddf;
+    --sbw-background-side: #f2f3f5;
+    --sbw-background-main: #fff;
     --interactive-normal: #4f5660;
     --interactive-hover: #2e3338;
     --interactive-active: #060607;
