--- a/src/render/assets/css/colors.css
+++ b/src/render/assets/css/colors.css
@@ -2,11 +2,13 @@
 
 :root, .dark-theme {
     --background-tertiary: #121212;
-    --background-primary: #282828;
-    --background-secondary: #1f1f1f;
+    --background-primary: #242424;
+    --background-secondary: #1d1d1d;
     --background-secondary-alt: #181818;
     --sbw-background-side: #181818;
     --sbw-background-main: #121212;
+    --inp-background-normal: #181818;
+    --inp-background-disabled: #121212;
     --interactive-normal: #b9bbbe;
     --interactive-hover: #dcddde;
     --interactive-active: #fff;
@@ -48,6 +50,8 @@
     --background-secondary-alt: #dbdddf;
     --sbw-background-side: #f2f3f5;
     --sbw-background-main: #fff;
+    --inp-background-normal: #dbdddf;
+    --inp-background-disabled: #d1d3d5;
     --interactive-normal: #4f5660;
     --interactive-hover: #2e3338;
     --interactive-active: #060607;
