--- a/src/render/assets/css/slider.module.css
+++ b/src/render/assets/css/slider.module.css
@@ -1,10 +1,10 @@
 .slider {
     position: relative;
     width: 100%;
-    height: 8px;
-    margin: 18px 0px;
+    height: 10px;
+    margin: 8px 0px;
     border-radius: 3px;
-    transition: none;
+    transition: none !important;
     background: var(--background-modifier-accent);
 }
 .slider > .bar {
@@ -29,7 +29,7 @@
     width: 10px;
     height: 24px;
     top: 50%;
-    margin-top: -13px;
+    margin-top: -12px;
     border-radius: 3px;
     transition: inherit;
     background-color: #fff;
