--- a/src/render/assets/css/launcher.css
+++ b/src/render/assets/css/launcher.css
@@ -1619,6 +1619,7 @@ a.anchor:hover {
     padding: 16px;
     border-radius: 8px;
     margin-bottom: 20px;
+    border: 1px solid var(--border-color-1);
 }
 
 .bxcF1-box .separator {
