--- a/src/render/assets/css/modal.module.css
+++ b/src/render/assets/css/modal.module.css
@@ -45,7 +45,7 @@
     max-height .3s ease;
 }
 
-.layer > .modal * {
+/* .layer > .modal * {
     transition:
     transform 0.1s ease,
     background 0.1s ease,
@@ -55,7 +55,7 @@
     max-width .3s ease,
     max-height .3s ease,
     margin .3s ease;
-}
+} */
 
 .layer > .modal {
     position: relative;
@@ -66,13 +66,14 @@
     border-radius: 8px;
     min-width: 340px;
     min-height: 180px;
-    overflow-y: hidden;
-    overflow-x: hidden;
+    overflow: hidden;
     white-space: pre-line;
     font-size: 16px;
     font-family: var(--font-primary);
     text-align: start;
     pointer-events: all;
+    /* border: 1px solid var(--border-color-1); */
+    /* box-shadow: 0px 0px 32px 32px var(--color-shadow); */
 }
 
 .layer {
@@ -161,6 +162,7 @@
     max-width: 100vw;
     max-height: 100vh;
     border-radius: 0;
+    border: unset;
 }
 
 /* ==== HEADER ==== */
